# caffa

./: .codedocs  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.builder  README.md  create_keys_example.sh  vcpkg.json  vcpkg.json.cmake  vcpkg_x64-linux.txt  vcpkg_x64-windows.txt
Core/: CMakeLists.txt  cafAppEnum.h  cafApplication.cpp  cafApplication.h  cafAssert.h  cafChildArrayField.h  cafChildArrayField.inl  cafChildArrayFieldAccessor.cpp  cafChildArrayFieldAccessor.h  cafChildArrayFieldHandle.h  cafChildField.h  cafChildField.inl  cafChildFieldAccessor.cpp  cafChildFieldAccessor.h  cafChildFieldHandle.cpp  cafChildFieldHandle.h  cafCodeGenerator.h  cafDataField.cpp  cafDataField.h  cafDataFieldAccessor.h  cafDataValueField.h  cafDefaultObjectFactory.cpp  cafDefaultObjectFactory.h  cafDocument.cpp  cafDocument.h  cafDynamicUniqueCast.h  cafExtraFieldValidators.hpp  cafFactory.h  cafField.h  cafFieldCapability.cpp  cafFieldCapability.h  cafFieldDocumentationCapability.cpp  cafFieldDocumentationCapability.h  cafFieldHandle.cpp  cafFieldHandle.h  cafFieldInitHelper.h  cafFieldIoCapability.cpp  cafFieldIoCapability.h  cafFieldIoCapabilitySpecializations.h  cafFieldIoCapabilitySpecializations.inl  (+64 more)
DataModel/: CMakeLists.txt  cafAppEnum.h  cafChildArrayField.h  cafChildArrayField.inl  cafChildArrayFieldAccessor.cpp  cafChildArrayFieldAccessor.h  cafChildArrayFieldHandle.h  cafChildField.h  cafChildField.inl  cafChildFieldAccessor.cpp  cafChildFieldAccessor.h  cafChildFieldHandle.cpp  cafChildFieldHandle.h  cafDataField.h  cafDefaultObjectFactory.cpp  cafDefaultObjectFactory.h  cafFactory.h  cafField.h  cafFieldCapability.cpp  cafFieldCapability.h  cafFieldHandle.cpp  cafFieldHandle.h  cafFieldInitHelper.h  cafFieldIoCapability.h  cafFieldProxyAccessor.h  cafFieldScriptingCapability.cpp  cafFieldScriptingCapability.h  cafFieldValidator.h  cafMethodHandle.h  cafMethodInitHelper.h  cafObjectCapability.cpp  cafObjectCapability.h  cafObjectFactory.h  cafObjectHandle.cpp  cafObjectHandle.h  cafObjectHandlePortableDataType.h  cafObjectMacros.h  cafObjectPerformer.h  cafSignal.cpp  cafSignal.h  (+3 more)
GrpcInterface/: CMakeLists.txt  cafGrpcAppService.cpp  cafGrpcAppService.h  cafGrpcApplication.cpp  cafGrpcApplication.h  cafGrpcCallbacks.h  cafGrpcCallbacks.inl  cafGrpcChildArrayFieldAccessor.h  cafGrpcChildFieldAccessor.h  cafGrpcClient.cpp  cafGrpcClient.h  cafGrpcClientApplication.cpp  cafGrpcClientApplication.h  cafGrpcClientObjectFactory.cpp  cafGrpcClientObjectFactory.h  cafGrpcClientPassByRefObjectFactory.cpp  cafGrpcClientPassByRefObjectFactory.h  cafGrpcClientPassByValueObjectFactory.cpp  cafGrpcClientPassByValueObjectFactory.h  cafGrpcCodeGenerator.h  cafGrpcDataFieldAccessor.h  cafGrpcException.h  cafGrpcFieldService.cpp  cafGrpcFieldService.h  cafGrpcMarkdownGenerator.cpp  cafGrpcMarkdownGenerator.h  cafGrpcMethodAccessor.h  cafGrpcObjectClientCapability.h  cafGrpcObjectService.cpp  cafGrpcObjectService.h  cafGrpcPythonGenerator.cpp  cafGrpcPythonGenerator.h  cafGrpcRegisterFieldAccessor.h  cafGrpcServer.cpp  cafGrpcServer.h  cafGrpcServerApplication.cpp  cafGrpcServerApplication.h  cafGrpcServiceInterface.h  cafGrpcSession.cpp  cafGrpcSession.h
ProjectDataModel/: CMakeLists.txt  cafApplication.cpp  cafApplication.h  cafDocument.cpp  cafDocument.h
RestInterface/: CMakeLists.txt  cafRestAppService.cpp  cafRestAppService.h  cafRestAuthenticator.h  cafRestClient.cpp  cafRestClient.h  cafRestClientApplication.cpp  cafRestClientApplication.h  cafRestDocumentService.cpp  cafRestDocumentService.h  cafRestObjectService.cpp  cafRestObjectService.h  cafRestOpenApiService.cpp  cafRestOpenApiService.h  cafRestRequest.cpp  cafRestRequest.h  cafRestSchemaService.cpp  cafRestSchemaService.h  cafRestServer.cpp  cafRestServer.h  cafRestServerApplication.cpp  cafRestServerApplication.h  cafRestServiceFactory.h  cafRestServiceInterface.cpp  cafRestServiceInterface.h  cafRestSession.cpp  cafRestSession.h  cafRestSessionService.cpp  cafRestSessionService.h  cafRestUtility.cpp  cafRestUtility.h
RpcBase/: CMakeLists.txt  cafRpcApplication.cpp  cafRpcApplication.h  cafRpcChildArrayFieldAccessor.h  cafRpcChildFieldAccessor.h  cafRpcClient.h  cafRpcClientPassByRefObjectFactory.cpp  cafRpcClientPassByRefObjectFactory.h  cafRpcClientPassByValueObjectFactory.cpp  cafRpcClientPassByValueObjectFactory.h  cafRpcDataFieldAccessor.h  cafRpcMethodAccessor.h  cafRpcObjectConversion.cpp  cafRpcObjectConversion.h  cafRpcServer.h  cafRpcServerApplication.cpp  cafRpcServerApplication.h
UserInterface/: CMakeLists.txt  PdmUi.plantuml  cafAboutDialog.cpp  cafProgressInfo.cpp  cafProgressState.h  cafQActionWrapper.cpp  cafQActionWrapper.h  cafQTreeViewStateSerializer.cpp  cafUiCheckBoxDelegate.h  cafUiCheckBoxEditor.cpp  cafUiCheckBoxEditor.h  cafUiCheckBoxTristateEditor.cpp  cafUiCheckBoxTristateEditor.h  cafUiColorEditor.cpp  cafUiColorEditor.h  cafUiComboBoxEditor.cpp  cafUiComboBoxEditor.h  cafUiDateEditor.cpp  cafUiDateEditor.h  cafUiDefaultObjectEditor.cpp  cafUiDoubleSliderEditor.cpp  cafUiDoubleSliderEditor.h  cafUiDoubleValueEditor.cpp  cafUiDoubleValueEditor.h  cafUiDragDropInterface.h  cafUiFieldEditorHandle.cpp  cafUiFieldEditorHandle.h  cafUiFieldEditorHelper.cpp  cafUiFieldEditorHelper.h  cafUiFormLayoutObjectEditor.cpp  cafUiFormLayoutObjectEditor.h  cafUiLabelEditor.cpp  cafUiLabelEditor.h  cafUiLineEditor.cpp  cafUiLineEditor.h  cafUiListEditor.cpp  cafUiListEditor.h  cafUiListView.cpp  cafUiListView.h  cafUiListViewEditor.cpp  (+42 more)
cafCommand/: CMakeLists.txt  CafCommandSystemSpecification.plantuml  cafCmdExecCommandManager.cpp  cafCmdExecCommandManager.h  cafCmdExecuteCommand.h  cafCmdFeature.cpp  cafCmdFeature.h  cafCmdFeatureManager.cpp  cafCmdFeatureManager.h  cafCmdFeatureMenuBuilder.cpp  cafCmdFeatureMenuBuilder.h  cafCmdFieldChangeExec.cpp  cafCmdFieldChangeExec.h  cafCmdSelectionChangeExec.cpp  cafCmdSelectionChangeExec.h  cafCmdSelectionHelper.cpp  cafCmdSelectionHelper.h  cafCmdUiCommandSystemImpl.cpp  cafCmdUiCommandSystemImpl.h  (+1 more)
(+3321 files in other folders)
